fix: primary white visibility (#15)
* fix: primary white visibility

* fix: action-palette changed gray base

---------

--- a/src/app/features/credential-management/credential-management.component.scss
+++ b/src/app/features/credential-management/credential-management.component.scss
@@ -42,7 +42,7 @@
   }
 
   .mat-sort-header-arrow svg {
-    fill: white !important;
+    fill: var(--primary-contrast-color) !important;
   }
 
 
@@ -106,6 +106,7 @@
         &.admin-button{
           border-color: var(--primary-color);
           color: var(--primary-color);
+          background-color: var(--primary-contrast-color);
         }
       }
     }
@@ -204,8 +205,8 @@
 
   .toggle-searchbar-btn{
     margin-right: 10px;
-    --mdc-icon-button-icon-color: var(--primary-color);
-    color: var(--primary-color);
+    --mdc-icon-button-icon-color: var(---neutral-medium);
+    color: var(---neutral-medium);
   }
 
   .mat-mdc-button>.mat-icon{
