--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -60,3 +60,9 @@ button, input, select, textarea {
 .mat-mdc-snack-bar-action {
   color: white !important;
 }
+#logout-link > * {
+  color: var(--status-error);
+}
+.mat-mdc-header-cell {
+  border-bottom-width: 3px !important;
+}
